
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct udp_fifo_handle {int * fds; } ;


 int EXIT_FAILURE ;
 int exit (int ) ;
 int perror (char*) ;
 int send (int ,char*,int,int ) ;

void udp_fifo_kmalloc_small(struct udp_fifo_handle* handle) {
 char buffer[128];
 int rv = send(handle->fds[0], &buffer[0], 128, 0);
 if (rv != 128) {
  perror("send()");
  exit(EXIT_FAILURE);
 }
}
