; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41458.c_udp_fifo_kmalloc_small.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41458.c_udp_fifo_kmalloc_small.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.udp_fifo_handle = type { i32* }

@.str = private unnamed_addr constant [7 x i8] c"send()\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @udp_fifo_kmalloc_small(%struct.udp_fifo_handle* %0) #0 {
  %2 = alloca %struct.udp_fifo_handle*, align 8
  %3 = alloca [128 x i8], align 16
  %4 = alloca i32, align 4
  store %struct.udp_fifo_handle* %0, %struct.udp_fifo_handle** %2, align 8
  %5 = load %struct.udp_fifo_handle*, %struct.udp_fifo_handle** %2, align 8
  %6 = getelementptr inbounds %struct.udp_fifo_handle, %struct.udp_fifo_handle* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 0
  %9 = load i32, i32* %8, align 4
  %10 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %11 = call i32 @send(i32 %9, i8* %10, i32 128, i32 0)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 128
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* @EXIT_FAILURE, align 4
  %17 = call i32 @exit(i32 %16) #3
  unreachable

18:                                               ; preds = %1
  ret void
}

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
